--- a/examples/Punkt_de/deploy.yaml
+++ b/examples/Punkt_de/deploy.yaml
@@ -14,16 +14,13 @@
   # Add here your the webhook
   slack_webhook: https://hooks.slack.com/services/__YOUR/SLACK/WEBHOOK__
 
-  port: 22
-  forwardAgent: false
-  multiplexing: true
   sshOptions:
     UserKnownHostsFile: /dev/null
     StrictHostKeyChecking: no
     ProxyJump: jumping@ssh-jumphost.karlsruhe.punkt.de
 
 # The target domain
-kuecher.com:
+domain.tld:
   <<: *base
   user: proserver
   roles: Production
