--- a/examples/Uberspace/deploy.yaml
+++ b/examples/Uberspace/deploy.yaml
@@ -34,6 +34,9 @@ neos-site.com:
   # Defaults to true
   removeRobotsTxt: true
 
+  # Set the flow context, defaults to Production/Live
+  flow_context: Production
+
   frontend:
     # Add here the command who builds the frontend files, defaults to 'yarn pipeline'
     command: 'yarn pipeline'
