--- a/examples/Uberspace/deploy.yaml
+++ b/examples/Uberspace/deploy.yaml
@@ -37,6 +37,9 @@ neos-site.com:
   # Set the flow context, defaults to Production/Live
   flow_context: Production
 
+  # Set here the subfolder for the deployment, defaults to Neos
+  deploy_folder: Neos/Subfolder
+
   frontend:
     # Add here the command who builds the frontend files, defaults to 'yarn pipeline'
     command: 'yarn pipeline'
