--- a/examples/Proserver/deploy.yaml
+++ b/examples/Proserver/deploy.yaml
@@ -1,7 +1,7 @@
 # Install: dep install
 # Deploy: dep deploy
 
-.base: &base 
+.base: &base
 
   # The proServer can run with nginx or apache
   # Defaults to apache
@@ -17,8 +17,20 @@
   # Put here the username
   user: vpro__XXXX__
 
+  # Enter which ssh key should be generated and used
+  # Defaults to id_rsa
+  sshKey: 'special_key'
+
   # Put here the ssh repository
+  # If the user is not provided, the user git get used (with the help of a ssh config file)
+  # If the domain has more than domain.tld, an configuration entry in ~/.ssh/config will be genereated.
+  # In combinantion with `sshKey` this can be used if multiple sites are needed on one host
   repository: git@github.com:__OWNER__/__REPOSITORY__.git
+
+  # Put here the database name
+  # If this settings is not provided it will defaults to `USER_neos`
+  # If a value is provided, this will used as replacement for `neos`, the USER get prefixed automatically
+  database: domain_tld
 
   # Add here your the webhook
   slack_webhook: https://hooks.slack.com/services/__YOUR/SLACK/WEBHOOK__
