:bug: Fix wrong declaration of default value in example

--- a/examples/Proserver/deploy.yaml
+++ b/examples/Proserver/deploy.yaml
@@ -4,7 +4,7 @@
 .base: &base
 
   # The proServer can run with nginx or apache
-  # Defaults to apache
+  # Defaults to nginx
   server: nginx
 
   # Please enter here a email address where you as a service provider
