:heavy_plus_sign: Add missing PHP dependency

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         ]
     },
     "require": {
+        "ext-intl": "*",
         "deployer/deployer": "^6.6",
         "deployer/recipes": "^6.2"
     }
