--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.2 || ^8.0",
         "ext-intl": "*",
-        "deployer/deployer": "^6.8"
+        "deployer/deployer": "^6.9"
     }
 }
